sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:4: error: not found: value swapped
  while(swapped)
        ^